--- a/src/localize/languages/hu.json
+++ b/src/localize/languages/hu.json
@@ -1,16 +1,16 @@
 {
   "common": {
     "version": "Verzió",
-    "description": "Egy kártya, amely információkat jelenít meg a ho- és diszkomfort-indexrol a helyiség homérséklete és páratartalma alapján!",
-    "invalid_configuration": "A Kényelmes Környezetkártya konfigurációja érvénytelen vagy nem létezik, kérjük, vizsgálja meg!",
-    "temperature": "Homérséklet",
+    "description": "Egy kártya, amely információkat jelenít meg a hő és diszkomfort-indexről a helyiség hőmérséklete és páratartalma alapján!",
+    "invalid_configuration": "A Kényelmes környezetkártya konfigurációja érvénytelen vagy nem létezik, kérjük, vizsgálja meg!",
+    "temperature": "Hőmérséklet",
     "humidity": "Páratartalom",
-    "hi": "Ho index",
+    "hi": "Hő index",
     "di": "Kényelmetlenség index"
   },
   "configurator": {
     "room_name": "Szoba neve",
-    "temp_sensor": "Homérséklet szenzor",
+    "temp_sensor": "Hőmérséklet szenzor",
     "hum_sensor": "Páratartalom szenzor",
     "show_index": "Válaszd ki, melyik indexet szeretnéd megjeleníteni"
   },
